# nielsen-transformation

./: README.md  nielsen-transformation.cabal  stack.yaml
src/: BFS.hs  Brzozowski.hs  BrzozowskiNT.hs  Color.hs  Example.hs  Main.hs  NielsenTransformation.hs  Or.hs  StandardNT.hs  StandardNTExample.hs  Unsure.hs  Util.hs
src/Brzozowski/: Example.hs  NielsenTransformable.hs  Regex.hs
src/Data/: Or.hs  Side.hs  Swap.hs
src/Definitions/: Common.hs
src/Handcrafted/: BenchmarkSet.hs
src/NoRegex/: Example.hs  NielsenTransformable.hs
src/Parser/: ExtractWordEquation.hs  SMTLibParser.hs
src/Util/: BFS.hs  Color.hs  Unsure.hs  Util.hs
