name:                nielsen-transformation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/meipp/nielsen-transformation
license:             MIT
license-file:        LICENSE
author:              meipp
maintainer:          meipp@users.noreply.github.com
copyright:           2022 meipp
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable nielsen-transformation
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -Wno-missing-export-lists
  other-modules:       NielsenTransformation,
                       Util.Util,
                       Util.Unsure,
                       Util.BFS,
                       NoRegex.NielsenTransformable,
                       NoRegex.Example,
                       Handcrafted.BenchmarkSet,
                       Util.Color,
                       Data.Or,
                       Data.Side,
                       Data.Swap
                       Brzozowski.Regex,
                       Brzozowski.NielsenTransformable,
                       Brzozowski.Example
